fixing up line alignment of times

--- a/resources/assets/sass/pages/_recipe.single.scss
+++ b/resources/assets/sass/pages/_recipe.single.scss
@@ -41,7 +41,7 @@
             border: 3px solid $primary;
             width: 48px;
             height: 48px;
-            line-height: 36px;
+            line-height: 33px;
             padding: 5px;
             text-align: center;
             border-radius: 50%;
